Style buttons and squash bugs

--- a/src/App.css
+++ b/src/App.css
@@ -217,7 +217,45 @@ body {
   display: inline-block;
 }
 
-.manage-contract-buttons {
-  border-radius: 5px;
-  background-color: blue;
+#manage-contract-buttons {
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  border: 0.8px solid rgb(172, 172, 172);
+  border-radius: 4px;
+  background-color: white;
+  outline: none;
+}
+
+#manage-contract-buttons:hover {
+  border-color: #7ea5e5;
+  color: #7ea5e5;
+}
+
+#approve-button {
+  display: inline-block;
+  margin-right: 10px;
+  height: 35px;
+  width: 130px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background-color: #7ea5e5;
+  color: white;
+}
+
+#reject-button {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  height: 35px;
+  width: 125px;
+  outline: none;
+  border: 0.8px solid rgb(172, 172, 172);
+  border-radius: 4px;
+  background-color: white;
+}
+
+#reject-button:hover {
+  border-color: #7ea5e5;
+  color: #7ea5e5;
 }
